[gd_scene load_steps=13 format=3 uid="uid://c2yq4akajsxv6"]

[ext_resource type="Script" path="res://scrips/bala_teledirigi.gd" id="1_mc5yg"]
[ext_resource type="Texture2D" uid="uid://bhqjedgag0k34" path="res://assets/arms.png" id="2_fctia"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6pdft"]
size = Vector2(64, 64)

[sub_resource type="CircleShape2D" id="CircleShape2D_hs5l1"]
radius = 1613.11

[sub_resource type="BoxMesh" id="BoxMesh_1k5cg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_x20mm"]
atlas = ExtResource("2_fctia")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mtbi8"]
atlas = ExtResource("2_fctia")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2altq"]
atlas = ExtResource("2_fctia")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_osevr"]
atlas = ExtResource("2_fctia")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ug7ca"]
atlas = ExtResource("2_fctia")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2mdp4"]
atlas = ExtResource("2_fctia")
region = Rect2(0, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_prphf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x20mm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mtbi8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2altq")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_osevr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ug7ca")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2mdp4")
}],
"loop": false,
"name": &"salir",
"speed": 9.0
}]

[node name="bala" type="RigidBody2D" groups=["bala_player"]]
position = Vector2(1136, 800)
gravity_scale = 0.0
script = ExtResource("1_mc5yg")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 136)
shape = SubResource("RectangleShape2D_6pdft")

[node name="Area2D2" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(0, 136)
shape = SubResource("CircleShape2D_hs5l1")

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(0, 16)
scale = Vector2(0.5, 0.5)

[node name="MeshInstance2D" type="MeshInstance2D" parent="Node2D"]
visible = false
modulate = Color(1, 0, 1, 0.419608)
position = Vector2(0, -152)
rotation = 0.785397
scale = Vector2(145.355, 146.043)
mesh = SubResource("BoxMesh_1k5cg")

[node name="MeshInstance2D2" type="MeshInstance2D" parent="Node2D"]
visible = false
modulate = Color(1, 0, 1, 0.419608)
position = Vector2(0, -80)
scale = Vector2(80, 224)
mesh = SubResource("BoxMesh_1k5cg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Node2D"]
texture_filter = 1
position = Vector2(-8.4877e-05, 240)
rotation = 0.00437021
scale = Vector2(15.7499, 16.3449)
sprite_frames = SubResource("SpriteFrames_prphf")
animation = &"salir"
autoplay = "default"

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="area_entered" from="Area2D2" to="." method="_on_area_2d_2_area_entered"]
[connection signal="area_exited" from="Area2D2" to="." method="_on_area_2d_2_area_exited"]
[connection signal="animation_finished" from="Node2D/AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
